k8s/apps/staging/outside/service/minio.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  hostnames: ["minio.ooooo.space"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
          

---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: http
      port: 9000
  clusterIP: None

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio
  labels:
    kubernetes.io/service-name: minio
addressType: IPv4
ports:
  - name: http
    port: 9000
endpoints:
  - addresses:
      - 192.168.6.144
    conditions:
      ready: true
