k8s/apps/staging/outside/service/nix-cache.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: upstream-nix-cache
spec:
  type: ExternalName
  externalName: cache.nixos.org

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nix-cache
  annotations:
    # 开启代理缓冲
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    # 定义缓存区域（名称需与 NGINX Controller 配置中的 proxy_cache_path 匹配）
    nginx.ingress.kubernetes.io/proxy-cache: "nix_cache_zone"
    # 缓存的有效时间
    nginx.ingress.kubernetes.io/proxy-cache-valid: "200 302 12h"
    # 允许使用过期的缓存（在无法连接上游时）
    nginx.ingress.kubernetes.io/proxy-cache-use-stale: "error timeout http_500 http_502 http_503 http_504"
    # 代理请求的超时时间（连接，发送，读取）
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    # 添加自定义的响应头，显示缓存状态
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Cache-Status $upstream_cache_status;
      resolver 223.5.5.5 223.6.6.6 valid=300s ipv6=off;

spec:
  ingressClassName: nginx-internal
  rules:
    - host: "nix-cache.ooooo.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: upstream-nix-cache
                port:
                  number: 443 # cache.nixos.org 是 HTTPS
