k8s/apps/staging/outside/service/seafile.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
spec:
  hostnames: ["seafile.ooooo.space"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seafile
          port: 4444
          
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  ports:
    - name: http
      port: 4444
  clusterIP: None

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: seafile
  labels:
    kubernetes.io/service-name: seafile
addressType: IPv4
ports:
  - name: http
    port: 4444
endpoints:
  - addresses:
      - 192.168.6.144
    conditions:
      ready: true
