k8s/apps/staging/outside/service/vaultwarden.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  hostnames: ["vw.${MAIN_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 6400

---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: http
      port: 6400
  clusterIP: None

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vaultwarden
  labels:
    kubernetes.io/service-name: vaultwarden  # 必须有，指明对应哪个 Service
addressType: IPv4
ports:
  - name: http
    port: 6400
endpoints:
  - addresses:
      - 192.168.6.141
    conditions:
      ready: true
